--- a/src/screens/analyze/analyze.scss
+++ b/src/screens/analyze/analyze.scss
@@ -71,3 +71,7 @@
   .ant-advanced-search-form .ant-form-item-control-wrapper {
     flex: 1;
   }
+
+  .rd3t-g{
+    transform: translate(26px, 150px);;
+  }
